Add some feedback stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 derivative = "*"
+index_list = "*"
 slice-group-by = "*"
 uuid = { version = "*", features = ["v4"] }
