Lots of changes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,9 @@ arrayvec = "*"
 derivative = "*"
 generic_map.path = "../generic_map"
 index_list = "*"
+redis = { version = "*", optional = true }
 slice-group-by = "*"
 uuid = { version = "*", features = ["v4"] }
+
+[features]
+redis = ["dep:redis"]
